# A4MD

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  CodingConventions.md  Dockerfile  Dockerfile.build  README.md  TargetArchList.txt  build_container.sh  setup.py  setup_deps.sh  shippable.yaml
.github/basic_test/: CMakeLists.txt  FindA4MD.cmake  consumer.cxx  flux_prod_cons.sh  local_prod_cons.sh  producer.cxx
.github/basic_test/script/: compute.py  load.py
.github/workflows/: basic_test.yaml
a4md/: CMakeLists.txt  analyzer.cxx  generator.cxx  ingester.cxx  ingester.h  main.cxx  mdgenerator.cxx  retriever.cxx  retriever.h  test-ingest.cpp  test_consumer.cxx  test_producer.cxx
a4md/analysis/: calc_dist_matrix_for_frame.py  calc_per_residue_temperature_for_frame.py  calc_rmsd_for_frame.py  pbc.py  trajectory_helper.py
a4md/common/: CMakeLists.txt  chunk.h  chunk_operator.cxx  chunk_reader.cxx  chunk_reader.h  chunk_serializer.cxx  chunk_serializer.h  chunk_stager.cxx  chunk_stager.h  chunk_writer.cxx  chunk_writer.h  chunker.cxx  chunker.h  cv_chunk.h  cv_runner.cxx  cv_runner.h  dataspaces_reader.cxx  dataspaces_reader.h  dataspaces_writer.cxx  dataspaces_writer.h  exceptions.h  ims_reader.cxx  ims_reader.h  ims_writer.cxx  ims_writer.h  md_chunk.h  md_intermediator.cxx  md_intermediator.h  md_runner.cxx  md_runner.h  md_stager.cxx  md_stager.h  py_chunks.cxx  py_chunks.h  py_runner.cxx  py_runner.cxx.bak  py_runner.h  serializable_chunk.h  test-main.cxx
a4md/common/test/: CMakeLists.txt  direct.py  test-chunk-serializer.cxx  test-chunk.cxx  test-ds.cxx  test-main.cxx  test-py-executor.cxx  test-runner.cxx  test_direct.py  test_mdrunner.py  tests.py
a4md/dtl/: CMakeLists.txt  chunk_reader.cxx  chunk_reader.h  chunk_writer.cxx  dataspaces_reader.cxx  dataspaces_reader.h  dataspaces_writer.cxx  dataspaces_writer.h  decaf_reader.cxx  decaf_reader.h  decaf_writer.cxx  decaf_writer.h
a4md/dtl/test/: test-ds.cxx
a4md/ingest/: CMakeLists.txt  chunk_reader.cxx  chunk_reader.h  chunk_stager.cxx  chunk_stager.h  chunk_writer.cxx  chunk_writer.h  chunker.cxx  chunker.h  common.h  cv_buffer.cxx  cv_buffer.h  dataspaces_writer.cxx  dataspaces_writer.h  exceptions.h  exeptions.h  ims_reader.cxx  ims_reader.h  ims_writer.h  ingest.cxx  ingest.h  ingester.cxx  ingester.h  md_generator.cxx  md_generator.h  md_ingest.cxx  md_stager.cxx  md_stager.h  mdingest.cxx  pdb_chunker.cxx  pdb_chunker.h  plumed_chunker.cxx  plumed_chunker.h  plumed_ingest.cxx  pycall.cxx  test.cxx
a4md/ingest/test/: CMakeLists.txt  load.py  tests-ingest-ds.cxx  tests-ingest.cxx
a4md/retrieve/: CMakeLists.txt  chunk_analyzer.cxx  chunk_analyzer.h  md_analyzer.cxx  md_analyzer.h  md_retriever.cxx  md_retriever.h  py_runner.cxx  py_runner.h  py_voronoi_analyzer.cxx  py_voronoi_analyzer.h  retrieve.cxx  retrieve.h  retriever.cxx  retriever.h  voronoi_analyzer.cxx  voronoi_analyzer.h
a4md/retrieve/test/: CMakeLists.txt  test-main.cxx
cmake/: FindCRAY.cmake  FindDataSpaces.cmake  Findibverbs.cmake  Findrdmacm.cmake
config/: CMakeLists.txt  a4md_config.in  a4md_config.sh.in
examples/: CMakeLists.txt  data_extraction.py  plot_analysis_time.ipynb  plot_ete_time.ipynb  plot_sim_time.ipynb  plot_varying_L.ipynb
examples/chain_workflow/src/: consumer.cxx  intermediator.cxx  producer.cxx
examples/sample_workflow/dataspaces/: 1x1.sh  1x1x1.sh  1xn.sh  flux.dspaces.prod_con.sh  local.dspaces.inter.sh  local.dspaces.prod_con.sh  lsf.dspaces.inter.sh  lsf.dspaces.prod_con.sh  nxn.sh  slurm.dspaces.prod_con.sh
examples/sample_workflow/decaf/: inter.py  prod_con.py
examples/sample_workflow/script/: compute.py  forward.py  load.py
examples/sample_workflow/src/: CMakeLists.txt  consumer.cxx  intermediator.cxx  producer.cxx
examples/sequential/: calc_voronoi.py  calc_voronoi_from_trajectory.py  in.lj  run_submit.sh  submit.sh
examples/sequential_in_transit/: calc_voronoi_for_frame.py  in.lj  run_submit.sh  submit.sh
examples/sequential_in_transit_vary_N/: calc_voronoi_for_frame.py  in.lj  run_submit.sh  submit.sh
examples/sequential_vary_N/: calc_voronoi_from_trajectory.py  run_submit.sh  submit.sh
install/: download_a4md.sh  install_a4md.sh  install_a4md_deps.sh  install_conda.sh  install_dataspaces.sh  install_sample_ensemble.sh  install_spack_packages.sh
project/: README  a4md.py  checkio.sh  create_gmx_input.py  create_lammps_input.py  environment.py  gmx.py  init.py  init_gmx.py
project/analysis_codes/: calc_dist_matrix_for_frame.py  calc_voronoi_for_frame.py
project/files/gltph_gmx/: .run.sh.swp  bench.mdp  remake_tpr.sh  run.sh
project/files/gltph_gmx/top/: popc.itp  pope.itp  popg.itp  posre_Other_chain_I.itp  posre_Protein_chain_A.itp  posre_Protein_chain_U.itp  tip3p.itp  topol.top  topol_Other_chain_I.itp  topol_Other_chain_L.itp  topol_Other_chain_M.itp  topol_Other_chain_N.itp  topol_Protein_chain_A.itp  topol_Protein_chain_B.itp  topol_Protein_chain_C.itp  topol_Protein_chain_S.itp  topol_Protein_chain_T.itp  topol_Protein_chain_U.itp
project/notebooks/: disk_stats.ipynb  glt_analysis.ipynb  plot_functions.py  tau_performance_profiles.ipynb  traditional_vs_plumed_sequential.ipynb  vary_data_interval.ipynb  workflows_comparison.ipynb
project/templates/: caliburncluster.sh
src/a4md/: CMakeLists.txt  test_consumer.cxx
src/a4md/common/: CMakeLists.txt
src/a4md/common/include/: py_runner.h
src/a4md/common/src/: chunk_serializer.cxx  chunk_stager.cxx  md_runner.cxx
src/a4md/dtl/: CMakeLists.txt
src/a4md/dtl/include/: dataspaces_reader.h  dataspaces_writer.h
src/a4md/dtl/src/: dataspaces_reader.cxx  dataspaces_writer.cxx
src/a4md/dtl/test/: CMakeLists.txt  test-ds.cxx
src/a4md/ingest/: CMakeLists.txt
src/a4md/ingest/include/: ingester.h  md_generator.h  pdb_chunker.h
src/a4md/ingest/test/: tests-ingest.cxx
src/a4md/retrieve/: CMakeLists.txt
src/a4md/retrieve/include/: md_analyzer.h  retriever.h
src/a4md/retrieve/src/: md_retriever.cxx
src/a4md/retrieve/test/: test-main.cxx
tests/: CMakeLists.txt  test_cv.py  test_serialization.cxx
(+1 files in other folders)
